Added new card into profile

--- a/index.html
+++ b/index.html
@@ -12,9 +12,21 @@
     <div class="card_white text-left">
       <img src="images/profile.jpg" width="120px" class="img-circle" alt="Aleksi Rendel">
       <h1>Me. Aleksi.</h1>
-      <p>Programmer from Berlin working in e-commerce. <br>I enjoy good usability and I love usefull and well crafted products.</p>
-      <p>Bike. Gravel.<br>Yoga. Ashtanga.<br>Climb. Boulder.<br>Food. All.<br>Music. Techno.<br>Wodka. Soda.<br><br></p>
+      <p>Programmer from Berlin working in e-commerce. <br>I enjoy good usability and I love usefull and well crafted products.<br><br></p>
       <a href="https://github.com/galeksi" class="btn-green" target="_blank">GITHUB</a>
+    </div>
+    <div class="card_white text-center">
+      <h2>My perfect couples:</h2>
+      <p>Bike - Steel<br>
+        Yoga - Ashtanga<br>
+        Climb - Boulder<br>
+        Food - All<br>
+        Alva - Ines<br>
+        HTML - CSS<br>
+        Music - Techno<br>
+        Sauna - Hot<br>
+        Wodka - Soda<br>
+      </p>
     </div>
     <div class="footer_black text-center">
       <h2>Don't follow me. Follow these:</h2>
